--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
                 </div>
             </div>
         </nav>
+        
+        <div class="header__content">
+            <h1>GitHub</h1>
+            <div class="figure">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </div>
+        </div>
     </header>
 </body>
 </html>
