--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
             <div class="main__item"></div>
         </div>
     </main>
+    
+    <footer class="footer">
+        <p>This is my first Git/GitHub project</p>
+    </footer>
 </body>
 </html>
